Fix the button styling to stop them clumping together when they wrap

--- a/app/media/css/style.css
+++ b/app/media/css/style.css
@@ -151,4 +151,5 @@ table th a:visted
     display: inline-block;
     padding: 4px 12px 4px;
     text-decoration: none;
+    margin-bottom: 4px;
 }
